--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
-node_modules
+# Idea specific hidden files
+.idea/**
 
+# Node specific files
+node_modules/**
 
-#serverless
+# Serverless specific files
 .serverless
+.dynamodb/**
+
+# Typescript
+.build
+.reports
+
+# MacOS specific hidden files
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
