--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "description": "AWS lambda for managing PETs clinics using serverless framework",
+  "scripts": {
+    "start": "BRANCH=local SLS_DEBUG=* serverless offline start"
+  },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
