--- a/app/pets-ui/package.json
+++ b/app/pets-ui/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
+    "@babel/preset-typescript": "^7.24.7",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
@@ -28,6 +29,7 @@
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
