Add aliases for components and model folders, and update imports

--- a/app/pets-ui/tsconfig.json
+++ b/app/pets-ui/tsconfig.json
@@ -17,8 +17,11 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@model/*": ["./model/*"],
+      "@components/*": ["./components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
