--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
+    "aws-lambda": "^1.0.7",
     "express": "^4.19.2",
     "global": "^4.4.0",
     "serverless-dynamodb": "^0.2.54",
@@ -17,8 +18,12 @@
     "serverless-offline-aws-eventbridge": "^2.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "serverless-auto-swagger": "^3.0.0",
     "serverless-offline": "^13.6.0",
-    "serverless-plugin-tracing": "^2.0.0"
+    "serverless-plugin-tracing": "^2.0.0",
+    "ts-jest": "^29.2.4",
+    "typescript": "^5.5.4"
   }
 }
