Add yarn audit to app-ci & app-cd

--- a/.github/workflows/app-ci.yaml
+++ b/.github/workflows/app-ci.yaml
@@ -20,6 +20,8 @@ jobs:
           cache: "yarn"
       - name: Install dependencies
         run: yarn
+      - name: Audit packages
+        run: yarn audit
       - name: Run unit tests
         run: |
           cd ./app/pets-ui/
