--- a/.github/workflows/app-cd.yaml
+++ b/.github/workflows/app-cd.yaml
@@ -21,6 +21,8 @@ jobs:
           cache: "yarn"
       - name: Install dependencies
         run: yarn
+      - name: Audit packages
+        run: yarn audit
       - name: Run unit tests
         run: |
           cd ./app/pets-ui/
