--- a/.github/workflows/app-cd.yaml
+++ b/.github/workflows/app-cd.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Build application
         run: yarn run build
       - name: Upload build artifact
-        run: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           name: app-build
           path: app/pets-ui/build
