--- a/.github/workflows/app-cd.yaml
+++ b/.github/workflows/app-cd.yaml
@@ -31,6 +31,7 @@ jobs:
           yarn run lint
 
   deploy:
+    name: Deploy to S3
     runs-on: ubuntu-latest
     needs: [test-and-linting]
 
@@ -46,6 +47,7 @@ jobs:
         run: yarn
       - name: Build application
         run: yarn run build
+        working-directory: app/pets-ui
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
