--- a/app/pets-ui/.babelrc
+++ b/app/pets-ui/.babelrc
@@ -1,7 +1,12 @@
 {
     "presets": [
-        "@babel/preset-env",
-       ["@babel/preset-react", {"runtime": "automatic"}],
-       "@babel/preset-typescript"
+        [
+            "next/babel",
+            {
+                "@babel/preset-env": {},
+                "@babel/preset-react": {"runtime": "automatic"},
+                "@babel/preset-typescript": {}
+            }
+        ]      
     ]
 }
