--- a/.github/workflows/app-cd.yaml
+++ b/.github/workflows/app-cd.yaml
@@ -30,8 +30,8 @@ jobs:
           cd ./app/pets-ui/
           yarn run lint
 
-  deploy:
-    name: Deploy to S3
+  build:
+    name: Upload build
     runs-on: ubuntu-latest
     needs: [test-and-linting]
 
@@ -54,6 +54,19 @@ jobs:
           name: app-build
           path: app/pets-ui/.next
           if-no-files-found: error
+
+  deploy:
+    name: Deploy to S3
+    runs-on: ubuntu-latest
+    needs: [test-and-linting, build]
+
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-region: "eu-west-2"
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
       # - name: Upload App to S3 Bucket
       #   uses: jakejarvis/s3-sync-action@master
