--- a/.github/workflows/app-cd.yaml
+++ b/.github/workflows/app-cd.yaml
@@ -76,7 +76,7 @@ jobs:
           role-session-name: PETS-UI-Deploy
       - name: Upload App to S3
         working-directory: app/pets-ui/.next
-        run: aws s3 sync . s3://${{ secrets.AWS_PETS_UI_S3_BUCKET_NAME }}
+        run: aws s3 sync . s3://${{ secrets.AWS_PETS_UI_S3_BUCKET_NAME }} --sse
 
       # - name: Upload App to S3 Bucket
       #   uses: jakejarvis/s3-sync-action@master
