--- a/.github/workflows/app-cd.yaml
+++ b/.github/workflows/app-cd.yaml
@@ -72,7 +72,7 @@ jobs:
           aws-region: "eu-west-2"
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE_NAME }}"
+          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_UI_ROLE_NAME }}"
           role-session-name: PETS-UI-Deploy
       - name: Upload App to S3
         working-directory: app/pets-ui/.next
