--- a/.github/workflows/clinic-service-cd.yaml
+++ b/.github/workflows/clinic-service-cd.yaml
@@ -1,6 +1,8 @@
 name: Pets Clinic Service CI/CD
 
 on:
+  push:
+    branches: [feature/TBBETA-418]
   pull_request:
     branches: [main]
     paths: "core-services/clinic-service/**"
