--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -5,25 +5,32 @@
   "description": "AWS lambda for managing PETs clinics using serverless framework",
   "scripts": {
     "start": "serverless offline start --verbose",
-    "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start"
+    "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start",
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
     "@aws-sdk/lib-dynamodb": "^3.585.0",
     "aws-lambda": "^1.0.7",
+    "aws-xray-sdk": "^3.9.0",
     "express": "^4.19.2",
     "global": "^4.4.0",
+    "node-yaml": "^4.0.1",
     "serverless-dynamodb": "^0.2.54",
     "serverless-http": "^3.2.0",
     "serverless-offline-aws-eventbridge": "^2.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "@types/jest-plugin-context": "^2.9.7",
+    "aws-sdk-client-mock": "^4.0.1",
     "jest": "^29.7.0",
+    "jest-plugin-context": "^2.9.0",
     "serverless-auto-swagger": "^3.0.0",
     "serverless-offline": "^13.6.0",
     "serverless-plugin-tracing": "^2.0.0",
     "ts-jest": "^29.2.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
 }
