--- a/.github/workflows/clinic-service-cd.yaml
+++ b/.github/workflows/clinic-service-cd.yaml
@@ -28,9 +28,9 @@ jobs:
       # - name: Run unit tests
       #   run: yarn run test
       #   working-directory: core-services/clinic-service
-      - name: Run eslint
-        run: yarn run lint
-        working-directory: core-services/clinic-service
+      # - name: Run eslint
+      #   run: yarn run lint
+      #   working-directory: core-services/clinic-service
 
   upload:
     name: Upload handler
