--- a/.github/workflows/clinic-service-cd.yaml
+++ b/.github/workflows/clinic-service-cd.yaml
@@ -62,7 +62,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: handler
-          path: core-services/clinic-service/
+          path: deploy/
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -72,5 +72,5 @@ jobs:
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
           role-session-name: PETS-Clinic-Service-Deploy
       - name: Upload App to S3
-        working-directory: core-services/clinic-service/
-        run: aws s3 sync handler.js s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
+        working-directory: deploy/
+        run: aws s3 sync . s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
