--- a/.github/workflows/clinic-service-pr-checks.yaml
+++ b/.github/workflows/clinic-service-pr-checks.yaml
@@ -23,9 +23,9 @@ jobs:
         run: yarn
       - name: Audit packages
         run: yarn audit
-      # - name: Run unit tests
-      #   run: yarn run test
-      #   working-directory: core-services/clinic-service
+      - name: Run unit tests
+        run: yarn run test
+        working-directory: core-services/clinic-service
       # - name: Run eslint
       #   run: yarn run lint
       #   working-directory: core-services/clinic-service
