Fix trigger in clinic-service-deploy

--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -1,7 +1,9 @@
 name: Pets Clinic Service Deployment
 
 on:
-  merge:
+  pull_request:
+    types:
+      - closed
     branches: [main]
     paths: "core-services/clinic-service/**"
   workflow_dispatch:
