Add push trigger to clinic service pipelines for testing

--- a/.github/workflows/clinic-service-pr-checks.yaml
+++ b/.github/workflows/clinic-service-pr-checks.yaml
@@ -1,6 +1,8 @@
 name: Pets Clinic Service PR Checks
 
 on:
+  push:
+    branches: [feature/TBBETA-418]
   pull_request:
     branches: [main]
     paths: "core-services/clinic-service/**"
