--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -1,6 +1,8 @@
 name: Pets Clinic Service Deployment
 
 on:
+  push:
+    branches: [feature/TBBETA-418]
   pull_request:
     types:
       - closed
