--- a/.github/workflows/app-pr-checks.yaml
+++ b/.github/workflows/app-pr-checks.yaml
@@ -1,8 +1,7 @@
-name: Pets UI CI/CD
+name: Pets UI PR Checks
 
 on:
   pull_request:
-    branches: [main]
     paths: "app/**"
   workflow_dispatch:
 
@@ -22,58 +21,8 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Run unit tests
-        run: |
-          cd ./app/pets-ui/
-          yarn run test
-      - name: Run eslint
-        run: |
-          cd ./app/pets-ui/
-          yarn run lint
-
-  build:
-    name: Upload build
-    runs-on: ubuntu-latest
-    needs: [test-and-linting]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18.x
-          cache: "yarn"
-      - name: Install dependencies
-        run: yarn
-      - name: Build application
-        run: yarn run build
+        run: yarn run test
         working-directory: app/pets-ui
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-build
-          path: app/pets-ui/.next
-          if-no-files-found: error
-
-  deploy:
-    name: Deploy to S3
-    runs-on: ubuntu-latest
-    needs: [test-and-linting, build]
-
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-build
-          path: app/pets-ui/.next
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-region: "eu-west-2"
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_UI_ROLE_NAME }}"
-          role-session-name: PETS-UI-Deploy
-      - name: Upload App to S3
-        working-directory: app/pets-ui/.next
-        run: aws s3 sync . s3://${{ secrets.AWS_PETS_UI_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
+      - name: Run eslint
+        run: yarn run lint
+        working-directory: app/pets-ui
