--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   upload:
-    name: Upload handler
+    name: Upload handler as zip
     runs-on: ubuntu-latest
 
     steps:
@@ -21,11 +21,13 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
+      - name: Create zip
+        run: zip clinic-service-lambda.zip core-services/clinic-service/handler.js
       - name: Upload handler file
         uses: actions/upload-artifact@v4
         with:
-          name: handler
-          path: core-services/clinic-service/handler.js
+          name: lambda-zip
+          path: clinic-service-lambda.zip
           if-no-files-found: error
 
   deploy:
@@ -37,7 +39,7 @@ jobs:
       - name: Download build file
         uses: actions/download-artifact@v4
         with:
-          name: handler
+          name: lambda-zip
           path: deploy/
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
