--- a/.github/workflows/app-deploy.yaml
+++ b/.github/workflows/app-deploy.yaml
@@ -1,8 +1,6 @@
 name: Pets UI Deployment
 
 on:
-  push:
-    branches: [feature/TBBETA-417-2]
   pull_request:
     types:
       - closed
@@ -11,8 +9,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    name: Upload build
+  build-and-deploy:
+    name: Build and Deploy
     runs-on: ubuntu-latest
 
     steps:
@@ -39,33 +37,3 @@ jobs:
       - name: Upload App to S3
         working-directory: app/pets-ui/.next
         run: aws s3 sync . s3://${{ secrets.AWS_PETS_UI_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
-
-  #     - name: Upload build artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: app-build
-  #         path: app/pets-ui/.next
-  #         if-no-files-found: error
-
-  # deploy:
-  #   name: Deploy to S3
-  #   runs-on: ubuntu-latest
-  #   needs: [build]
-
-  #   steps:
-  #     - name: Download build artifact
-  #       uses: actions/download-artifact@v4
-  #       with:
-  #         name: app-build
-  #         path: app/pets-ui/.next
-  #     - name: Configure AWS credentials
-  #       uses: aws-actions/configure-aws-credentials@v4
-  #       with:
-  #         aws-region: "eu-west-2"
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_UI_ROLE_NAME }}"
-  #         role-session-name: PETS-UI-Deploy
-  #     - name: Upload App to S3
-  #       working-directory: app/pets-ui/.next
-  #       run: aws s3 sync . s3://${{ secrets.AWS_PETS_UI_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
