--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -1,6 +1,8 @@
 name: Pets Clinic Service Deployment
 
 on:
+  push:
+    branches: [feature/TBBETA-418]
   pull_request:
     types:
       - closed
@@ -9,8 +11,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  upload:
-    name: Upload handler as zip
+  deploy:
+    name: Deploy handler in zip
     runs-on: ubuntu-latest
 
     steps:
@@ -24,24 +26,6 @@ jobs:
       - name: Create lambda zip
         run: zip clinic-service-lambda.zip handler.js
         working-directory: core-services/clinic-service
-      - name: Upload lambda zip
-        uses: actions/upload-artifact@v4
-        with:
-          name: clinic-service-lambda
-          path: core-services/clinic-service/clinic-service-lambda.zip
-          if-no-files-found: error
-
-  deploy:
-    name: Deploy to S3
-    runs-on: ubuntu-latest
-    needs: [upload]
-
-    steps:
-      - name: Download build file
-        uses: actions/download-artifact@v4
-        with:
-          name: clinic-service-lambda
-          path: deploy/
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -53,3 +37,33 @@ jobs:
       - name: Upload App to S3
         working-directory: deploy/
         run: aws s3 sync . s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
+
+  #     - name: Upload lambda zip
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: clinic-service-lambda
+  #         path: core-services/clinic-service/clinic-service-lambda.zip
+  #         if-no-files-found: error
+
+  # deploy:
+  #   name: Deploy to S3
+  #   runs-on: ubuntu-latest
+  #   needs: [upload]
+
+  #   steps:
+  #     - name: Download build file
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: clinic-service-lambda
+  #         path: deploy/
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         aws-region: "eu-west-2"
+  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  #         role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
+  #         role-session-name: PETS-Clinic-Service-Deploy
+  #     - name: Upload App to S3
+  #       working-directory: deploy/
+  #       run: aws s3 sync . s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
