Fix clinic service CD upload step

--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -35,8 +35,8 @@ jobs:
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
           role-session-name: PETS-Clinic-Service-Deploy
       - name: Upload App to S3
-        working-directory: deploy/
-        run: aws s3 sync . s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
+        working-directory: core-services/clinic-service
+        run: aws s3 sync clinic-service-lambda.zip s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
 
   #     - name: Upload lambda zip
   #       uses: actions/upload-artifact@v4
