--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -1,6 +1,8 @@
 name: Pets Clinic Service Deployment
 
 on:
+  push:
+    branches: [feature/TBBETA-454]
   pull_request:
     types:
       - closed
@@ -32,9 +34,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           role-to-assume: "arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_PETS_CLINIC_SERVICE_ROLE_NAME }}"
           role-session-name: PETS-Clinic-Service-Deploy
+      - name: Get secrets from AWS
+        uses: aws-actions/aws-secretsmanager-get-secrets@v2
+        with:
+          secret-ids: test/ClinicServiceDeploy
+          parse-json-secrets: true
       - name: Upload Clinic Service to S3
         working-directory: core-services/clinic-service
-        run: aws s3 cp clinic-service-lambda.zip s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
+        run: aws s3 cp clinic-service-lambda.zip s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
       - name: Upload Swagger file to S3
         working-directory: core-services/clinic-service/swagger
-        run: aws s3 cp swagger.js s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
+        run: aws s3 cp swagger.js s3://$TEST_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $TEST_CLINICSERVICEDEPLOY_SSE_KEY
