--- a/core-services/clinic-service/tsconfig.json
+++ b/core-services/clinic-service/tsconfig.json
@@ -1,17 +1,25 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "src",
+    "target": "es2020",
+    "strict": true,
+    "preserveConstEnums": true,
+    "noEmit": true,
+    "sourceMap": false,
+    "module":"commonjs",
+    "moduleResolution":"node",
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true, 
+    "isolatedModules": true, 
     "paths": {
       "@/*": ["./*"],
-      "@config/*": ["./src/config/*"],
-      "@functions/*": ["./src/functions/*"],
-      "@models/*": ["./src/models/*"],
-      "@model": ["./src/models/"],
-      "@services/*": ["./src/services/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@test/*": ["./test/*"],
+      "@config/*": ["config/*"],
+      "@functions/*": ["functions/*"],
+      "@models/*": ["models/*"],
+      "@services/*": ["services/*"],
+      "@utils/*": ["utils/*"]
     },
-    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   }
 }
