--- a/.github/workflows/app-deploy-test.yaml
+++ b/.github/workflows/app-deploy-test.yaml
@@ -2,11 +2,14 @@ name: Pets UI Deployment
 
 on:
   workflow_dispatch:
+  push:
+    branches: [feature/TBBETA-454]
 
 jobs:
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
+    environment: test
 
     steps:
       - name: Checkout code
