--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -1,12 +1,15 @@
-name: Pets Clinic Service Deployment
+name: Pets Clinic Service Deployment - Test
 
 on:
   workflow_dispatch:
+  push:
+    branches: [featrue/TBBETA-454]
 
 jobs:
   deploy:
     name: Deploy handler & swagger files
     runs-on: ubuntu-latest
+    environment: test
 
     steps:
       - name: Checkout code
