Fix push trigger in clinic service deployment pipeline

--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -3,7 +3,7 @@ name: Pets Clinic Service Deployment - Test
 on:
   workflow_dispatch:
   push:
-    branches: [featrue/TBBETA-454]
+    branches: [feature/TBBETA-454]
 
 jobs:
   deploy:
