--- a/core-services/clinic-service/package.json
+++ b/core-services/clinic-service/package.json
@@ -3,11 +3,18 @@
   "private": true,
   "version": "1.0.0",
   "description": "AWS lambda for managing PETs clinics using serverless framework",
+  "main": "clinics.js",
+  "engines": {
+    "node": "18.*",
+    "yarn": "1.22.*"
+  },
   "scripts": {
     "start": "BRANCH=local serverless offline start --verbose",
     "start-m": "BRANCH=local SLS_DEBUG=* serverless offline start",
     "test": "BRANCH=local jest",
-    "tools-setup": "sls dynamodb install"
+    "tools-setup": "sls dynamodb install",
+    "build": "tsc -b tsconfig.json && yarn run build:copy",
+    "build:copy": "find src -type f \\( -name \"*.yml\" -or -name \"*.json\" \\) | cpio -pdm .build && find test -type f \\( -name \"*.yml\" -or -name \"*.json\" \\)  | cpio -pdm .build"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.585.0",
