--- a/core-services/clinic-service/tsconfig.json
+++ b/core-services/clinic-service/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "./src",
     "target": "es2020",
     "strict": true,
     "preserveConstEnums": true,
-    "noEmit": true,
+    "noEmit": false,
     "sourceMap": false,
     "module":"commonjs",
     "moduleResolution":"node",
     "skipLibCheck": true,
+    "alwaysStrict": true,
     "forceConsistentCasingInFileNames": true, 
     "isolatedModules": true, 
     "paths": {
@@ -20,6 +21,12 @@
       "@utils/*": ["utils/*"]
     },
     "esModuleInterop": true,
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "outDir": ".build",
+    "rootDir": "./"
+  },
+  "exclude": [
+    "jest.config.ts",
+    "**/*.unitTest.ts"
+  ]
 }
