--- a/.github/workflows/clinic-service-deploy.yaml
+++ b/.github/workflows/clinic-service-deploy.yaml
@@ -21,10 +21,8 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
-      - name: Build clinic service
-        run: yarn run build
       - name: Create lambda zip
-        run: zip clinic-service-files.zip ./build
+        run: zip clinic-service-lambda.zip handler.js
         working-directory: core-services/clinic-service
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -36,7 +34,7 @@ jobs:
           role-session-name: PETS-Clinic-Service-Deploy
       - name: Upload Clinic Service to S3
         working-directory: core-services/clinic-service
-        run: aws s3 cp clinic-service-files.zip s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
+        run: aws s3 cp clinic-service-lambda.zip s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
       - name: Upload Swagger file to S3
         working-directory: core-services/clinic-service/swagger
         run: aws s3 cp swagger.js s3://${{ secrets.AWS_PETS_CLINIC_SERVICE_S3_BUCKET_NAME }} --sse aws:kms --sse-kms-key-id ${{ secrets.AWS_PETS_UI_S3_SSE_KEY }}
