--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -17,8 +17,10 @@ jobs:
         with:
           node-version: 18.x
           cache: "yarn"
+      - name: Build clinic service
+        run: yarn run build
       - name: Create lambda zip
-        run: zip clinic-service-lambda.zip handler.js
+        run: zip clinic-service-lambda.zip ./build
         working-directory: core-services/clinic-service
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
