run deploy workflow on push

--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -20,6 +20,7 @@ jobs:
           node-version: 18.x
           cache: "yarn"
       - name: Build clinic service
+        working-directory: core-services/clinic-service
         run: yarn run build
       - name: Create lambda zip
         run: zip clinic-service-lambda.zip ./build
