--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    name: Deploy handler & swagger files
+    name: Deploy clinic service
     runs-on: ubuntu-latest
     environment: test
 
@@ -26,7 +26,7 @@ jobs:
         working-directory: core-services/clinic-service
         run: yarn run build
       - name: Create lambda zip
-        run: zip clinic-service-lambda.zip .build
+        run: zip -r clinic-service-lambda.zip .build/
         working-directory: core-services/clinic-service
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
