--- a/.github/workflows/clinic-service-deploy-test.yaml
+++ b/.github/workflows/clinic-service-deploy-test.yaml
@@ -20,13 +20,13 @@ jobs:
           node-version: 18.x
           cache: "yarn"
       - name: Install dependencies
-        run: yarn
+        run: yarn install
         working-directory: core-services/clinic-service
       - name: Build clinic service
         working-directory: core-services/clinic-service
         run: yarn run build
       - name: Create lambda zip
-        run: zip -r clinic-service-lambda.zip .build/
+        run: zip -r clinic-service-lambda.zip .build/*
         working-directory: core-services/clinic-service
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
