Add swagger-integrations script to clinic service deploy workflow: - add swagger-integrations.js to clinic-service - rename deploy job - retrieve URI secrets to insert into swagger spec - add step to run swagger-integrations script - add push trigger for testing

--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -2,10 +2,12 @@ name: Pets Clinic Service Deployment - Dev
 
 on:
   workflow_dispatch:
+  push:
+    branches: [feature/TBBETA-474]
 
 jobs:
   deploy:
-    name: Deploy handler & swagger files
+    name: Deploy build & swagger spec
     runs-on: ubuntu-latest
     environment: dev
 
@@ -33,11 +35,20 @@ jobs:
       - name: Get secrets from AWS
         uses: aws-actions/aws-secretsmanager-get-secrets@v2
         with:
-          secret-ids: dev/ClinicServiceDeploy
+          secret-ids: |
+            dev/ClinicServiceDeploy
+            Clinic_Service_URIs
           parse-json-secrets: true
       - name: Upload Clinic Service to S3
         working-directory: core-services/clinic-service
         run: aws s3 cp clinic-service-lambda.zip s3://$DEV_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $DEV_CLINICSERVICEDEPLOY_SSE_KEY
+      - name: Process Swagger file
+        uses: actions/github-script@v7
+        with:
+          working-directory: core-services/clinic-service
+          script: |
+            const script = require('swagger-integrations.js')
+            console.log(script)
       - name: Upload Swagger file to S3
         working-directory: core-services/clinic-service/swagger
         run: aws s3 cp swagger.js s3://$DEV_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $DEV_CLINICSERVICEDEPLOY_SSE_KEY
