--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const script = require('core-services/clinic-service/swagger-integrations.js')
+            const script = require('./core-services/clinic-service/swagger-integrations.js')
             console.log(script)
       - name: Upload Swagger file to S3
         working-directory: core-services/clinic-service/swagger
