Add console.logs for testing

--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -47,7 +47,7 @@ jobs:
         with:
           script: |
             const script = require('./core-services/clinic-service/swagger-integrations.js')
-            console.log(script)
+            script
       - name: Upload Swagger file to S3
         working-directory: core-services/clinic-service/swagger
         run: aws s3 cp swagger.js s3://$DEV_CLINICSERVICEDEPLOY_BUCKET_NAME --sse aws:kms --sse-kms-key-id $DEV_CLINICSERVICEDEPLOY_SSE_KEY
