--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -46,9 +46,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const addIntegrationsToSwagger = require('./core-services/clinic-service/swagger-integrations.js');
-            [const uriSecretNames, let swagger] = addIntegrationsToSwagger;
-            const fs = require('fs');
+            addIntegrationsToSwagger = require('./core-services/clinic-service/swagger-integrations.js');
+            [uriSecretNames, swagger] = addIntegrationsToSwagger;
+            fs = require('fs');
             fs.writeFile('uris_test.txt', uriSecretNames, (err) => {if (err) throw err;});
             fs.writeFile('swagger_test.txt', swagger, (err) => {if (err) throw err;});
 
