Modify swagger-integrations to return a 1D array

--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -48,9 +48,10 @@ jobs:
           script: |
             addIntegrationsToSwagger = require('./core-services/clinic-service/swagger-integrations.js');
             output = addIntegrationsToSwagger;
+            swagger = output.pop()
             fs = require('fs');
-            fs.writeFile('uris_test.txt', output.uriSecretNames, (err) => {if (err) throw err;});
-            fs.writeFile('swagger_test.txt', output.swagger, (err) => {if (err) throw err;});
+            fs.writeFile('uris_test.txt', output, (err) => {if (err) throw err;});
+            fs.writeFile('swagger_test.txt', swagger, (err) => {if (err) throw err;});
 
       - name: Upload Swagger file to S3
         working-directory: core-services/clinic-service/swagger
