--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -49,6 +49,7 @@ jobs:
             let inputFilePath = './core-services/clinic-service/swagger/swagger.js'
             fs = require('fs')
             var swaggerAsArray = fs.readFileSync(inputFilePath, 'utf-8').split('\r\n')
+            console.log(swaggerAsArray)
             swaggerAsArray = swaggerAsArray.slice(2,-1)
             var swaggerAsString = '{' + swaggerAsArray.join('') + '}'
             var swaggerAsJson = JSON.parse(swaggerAsString)
