--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -47,8 +47,11 @@ jobs:
         with:
           script: |
             script = require('./core-services/clinic-service/swagger-integrations.js')
+            [uriSecretNames, swaggerSpec] = script()
             console.log(script())
-            fs.writeFile('output_test.txt', script(), (err) => {if (err) throw err;});
+            console.log(uriSecretNames)
+            console.log(swaggerSpec)
+            fs.writeFile('output_test.txt', swaggerSpec, (err) => {if (err) throw err;});
 
       - name: Upload Swagger file to S3
         run: |
