--- a/.github/workflows/clinic-service-deploy-dev.yaml
+++ b/.github/workflows/clinic-service-deploy-dev.yaml
@@ -47,6 +47,8 @@ jobs:
         with:
           script: |
             script = require('./core-services/clinic-service/swagger-integrations.js')
+            uriSecretNames = []
+            swaggerSpec = ''
             [uriSecretNames, swaggerSpec] = script()
             console.log(script())
             console.log(uriSecretNames)
